// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Function | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Function | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    null,
    {
      "foo": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'apply')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": null,
}
`;

exports[`brute force Null | Function | Null 1`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 2`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 3`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 1`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 2`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 3`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 4`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 5`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Object 6`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    [Function],
    {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Null 1`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Object 1`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
    {},
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Object 2`] = `
{
  "error": {
    "message": "R.tryCatch | fn 'null'",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
    {
      "foo": 1,
    },
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
